--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ https://templatemo.com/tm-556-catalog-z
                     <a class="nav-link nav-link-3" href="about.html">من نحن</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-4" href="contact.html">تواصل</a>
+                    <a class="nav-link nav-link-4" href="mapwth.html">خريطة</a>
                 </li>
             </ul>
             </div>
