--- a/mapwth.html
+++ b/mapwth.html
@@ -44,7 +44,7 @@
 
         var clear = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
 	attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
-});clear.addTo(map)
+});//clear.addTo(map)
 
         // Rainviewer Control
         var rainviewerControl = L.control.rainviewer({ 
