--- a/mapwth.html
+++ b/mapwth.html
@@ -48,7 +48,7 @@
 
         // Rainviewer Control
         var rainviewerControl = L.control.rainviewer({ 
-            position: 'bottomleft',
+            position: 'topleft',
             nextButtonText: '>',
             playStopButtonText: 'إيقاف/تشغيل',
             prevButtonText: '<',
