--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
                 <li class="nav-item">
                     <a class="nav-link nav-link-4" href="mapwth.html">خريطة</a>
 
-<p>This button transfers you to another website!</p>
+<p>a test site</p>
 <a href="mapwth.html" target="_blank">
 	<button>الرادار</button>
+<p> geo</p>
 
+	<a href="geomap.html" target="_blank">
+	<button>الخارطة الجغرافية</button>
 </body>
 </html>
