--- a/mapwth.html
+++ b/mapwth.html
@@ -41,7 +41,7 @@
        
     //naviationjs
 
-    <script src="Leaflet.NavBar-master\src\Leaflet.NavBar.js"></script>
+    <script src="Leaflet.NavBar.js"></script>
 
     <script>
         var map = L.map('map').setView([24.755562, 46.589584], 6);
