--- a/mapwth.html
+++ b/mapwth.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
   
      ///navigation css
-    <link rel="stylesheet" href="Leaflet.NavBar-master\src\Leaflet.NavBar.css"/>
+    <link rel="stylesheet" href="Leaflet.NavBar.css"/>
     
     
 
