--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
                     <a class="nav-link nav-link-4" href="mapwth.html">خريطة</a>
 
 
+			 <h1 id="lol" onclick="lol()">Click me!</h1>
+
+<script>
+
+function lol() {
+    document.getElementById("lol").innerHTML = "geomap.html";
+}
+
+</script>
+
+
 <p> geo</p>
 
 	
