--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <script>
 
 function lol() {
-    document.getElementById("lol").innerHTML = "geomap.html";
+    document.getElementById("geomap.html").innerHTML = "geomap.html";
 }
 
 </script>
