--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
                     <a class="nav-link nav-link-4" href="mapwth.html">خريطة</a>
 
 
-			 <h1 id="lol" onclick="lol()">Click me!</h1>
+			
+<h1 id="lol" onclick="lol()">Click me!</h1>
 
 <script>
-
 function lol() {
-    document.getElementById("geomap.html").innerHTML = "geomap.html";
+    document.getElementById("lol").innerHTML = "Clicked";
+    // Navigate to sfgdfd.html when the element is clicked
+    window.location.href = 'geomap.html';
 }
-
 </script>
 
 
-<p> geo</p>
+
 
 	
 </body>
