--- a/index.html
+++ b/index.html
@@ -13,13 +13,26 @@
                 <li class="nav-item">
                     <a class="nav-link nav-link-4" href="mapwth.html">خريطة</a>
 
+<h1 id="wethr" onclick="wethr()">radar!</h1>
+
+<script>
+function wethr() {
+    document.getElementById("wethr").innerHTML = "...";
+    // Navigate to sfgdfd.html when the element is clicked
+    window.location.href = 'mapwth.html';
+}
+</script>
+
 
 			
-<h1 id="lol" onclick="lol()">Click me!</h1>
+
+
+			
+<h1 id="lol" onclick="lol()">geomap!</h1>
 
 <script>
 function lol() {
-    document.getElementById("lol").innerHTML = "Clicked";
+    document.getElementById("lol").innerHTML = "...";
     // Navigate to sfgdfd.html when the element is clicked
     window.location.href = 'geomap.html';
 }
