--- a/geomap.html
+++ b/geomap.html
@@ -13,7 +13,7 @@
     
 
     tion css ///naviga
-    <link rel="stylesheet" href="Leaflet.NavBar-master\src\Leaflet.NavBar.css"/>
+    <link rel="stylesheet" href="Leaflet.NavBar.css"/>
 
     
  
