--- a/geomap.html
+++ b/geomap.html
@@ -65,7 +65,7 @@
 <script src="leaflet.rainviewer.js"></script>
 
 
-<script src="Leaflet.NavBar-master\src\Leaflet.NavBar.js"></script>
+<script src="Leaflet.NavBar.js"></script>
 
 
 
