--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
     <link rel="stylesheet" href="css/templatemo-style.css">
 
 </head>
-<body></li>
-                <li class="nav-item">
-                    <a class="nav-link nav-link-4" href="mapwth.html">خريطة</a>
-
+<body>
+	
 <h1 id="wethr" onclick="wethr()">radar!</h1>
 
 <script>
