--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@ function lol() {
 </script>
 
 
+<h1 id="radar2" onclick="radar2()">radar2!</h1>
+
+<script>
+function radar2() {
+    document.getElementById("radar2").innerHTML = "...";
+    // Navigate to sfgdfd.html when the element is clicked
+    window.location.href = 'radar2.html';
+}
+</script>	
+
+
 
 
 	
