--- a/index.html
+++ b/index.html
@@ -45,7 +45,19 @@ function radar2() {
     // Navigate to sfgdfd.html when the element is clicked
     window.location.href = 'radar2.html';
 }
+</script>
+
+
+	<h1 id="cloudradar" onclick="clouradar()">cloudradar!</h1>
+
+<script>
+function cloudradar() {
+    document.getElementById("cloudradar").innerHTML = "...";
+    // Navigate to sfgdfd.html when the element is clicked
+    window.location.href = 'cloudradar.html';
+}
 </script>	
+
 
 
 
