--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ function radar2() {
 function cloudradar() {
     document.getElementById("cloudradar").innerHTML = "...";
     // Navigate to sfgdfd.html when the element is clicked
-    window.location.href = 'cloudradar.html';
+    window.location.href = 'Cloudradar.html';
 }
 </script>	
 
