--- a/index.html
+++ b/index.html
@@ -40,16 +40,15 @@ function lol() {
 
 
 
-	<h1 id="cloudradar" onclick="clouradar()">cloudradar!</h1>
+	<h1 id="lol" onclick="lol()">geomap!</h1>
 
 <script>
-function cloudradar() {
-    document.getElementById("cloudradar").innerHTML = "...";
+function lol() {
+    document.getElementById("lol").innerHTML = "...";
     // Navigate to sfgdfd.html when the element is clicked
     window.location.href = 'cloudradar.html';
 }
-</script>	
-
+</script>
 
 
 
