--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@ function lol() {
 
 
 
-	<h1 id="lol" onclick="lol()">geomap!</h1>
+	<h1 id="cloud" onclick="cloud()">geomap!</h1>
 
 <script>
-function lol() {
-    document.getElementById("lol").innerHTML = "...";
+function cloud() {
+    document.getElementById("cloud").innerHTML = "...";
     // Navigate to sfgdfd.html when the element is clicked
     window.location.href = 'cloudradar.html';
 }
