--- a/cloudradar.html
+++ b/cloudradar.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+<link rel="stylesheet" href="Leaflet.NavBar.css"/>
     <link href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" rel="stylesheet"/>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <style type="text/css">
@@ -56,6 +56,12 @@
 	maxZoom: 17,
 	attribution: 'Map data: &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, <a href="http://viewfinderpanoramas.org">SRTM</a> | Map style: &copy; <a href="https://opentopomap.org">OpenTopoMap</a> (<a href="https://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA</a>)'
 });OpenTopoMap.addTo(map)
+
+
+	var nav= L.control.navbar({
+            position:'topright'
+        
+        });nav.addTo(map)
 
     /**
      * RainViewer radar animation part
