--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ function lol() {
 
 
 
-	<h1 id="cloud" onclick="cloud()">geomap!</h1>
+	<h1 id="cloud" onclick="cloud()">cloudradar!</h1>
 
 <script>
 function cloud() {
