--- a/index.html
+++ b/index.html
@@ -1,58 +1,156 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>testweathersite</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="css/templatemo-style.css">
-
+    <title>Page Title</title>
 </head>
-<body>
-	
-<h1 id="wethr" onclick="wethr()">radar!</h1>
 
-<script>
-function wethr() {
-    document.getElementById("wethr").innerHTML = "...";
-    // Navigate to sfgdfd.html when the element is clicked
-    window.location.href = 'mapwth.html';
-}
-</script>
+<body style="margin: 0; overflow: hidden;">
+    
+    <img src="cloudradar.png" onclick="navigateToradar()" style="position: absolute; top: 75%; left: 35%; transform: translate(-90%, -30%); cursor: pointer;width: 200px; height: 150px;">
 
-
-			
-
-
-			
-<h1 id="lol" onclick="lol()">geomap!</h1>
-
-<script>
-function lol() {
-    document.getElementById("lol").innerHTML = "...";
-    // Navigate to sfgdfd.html when the element is clicked
-    window.location.href = 'geomap.html';
-}
-</script>
+    <img src="thecloud.png" onclick="navigateTocloud()" style="position: absolute; top: 50%; left: 35%; transform: translate(-90%, -30%); cursor: pointer;width: 150px; height: 125px;">
+   
+    <img src="mapwth.png" onclick="navigateToMap()" style="position: absolute; top: 30%; left: 35%; transform: translate(-90%, -30%); cursor: pointer;width: 200px; height: 150px;">
 
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/postprocessing@6.7.0/build/postprocessing.min.js"></script>
+
+    <script>
+        let scene, camera, cloudParticles = [], composer;
+
+        function init() {
+            scene = new THREE.Scene();
+            camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 1, 1000);
+            camera.position.z = 1;
+            camera.rotation.x = 1.16;
+            camera.rotation.y = -0.12;
+            camera.rotation.z = 0.27;
+
+            let ambient = new THREE.AmbientLight(0x555555);
+            scene.add(ambient);
+
+            let directionalLight = new THREE.DirectionalLight(0xff8c19);
+            directionalLight.position.set(10, -3, 5);
+            scene.add(directionalLight);
+
+            renderer = new THREE.WebGLRenderer();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+            scene.fog = new THREE.FogExp2(0x0354e, 0.0004);
+            renderer.setClearColor(scene.fog.color);
+            document.body.appendChild(renderer.domElement);
+
+            // Picture one
+            let loader = new THREE.TextureLoader();
+            loader.load("https://i.imgur.com/HDiNamF.png", function (texture) {
+                cloudGeo = new THREE.PlaneBufferGeometry(1000, 900);
+                cloudMaterial = new THREE.MeshLambertMaterial({
+                    map: texture,
+                    transparent: true
+                });
+
+                for (let p = 30; p < 100; p++) {
+                    let cloud = new THREE.Mesh(cloudGeo, cloudMaterial);
+                    cloud.position.set(
+                        Math.random() * 700 - 400,
+                        700,
+                        Math.random() * 500 - 500
+                    );
+                    cloud.rotation.x = 1.16;
+                    cloud.rotation.y = -0.12;
+                    cloud.rotation.z = Math.random() * 2 * Math.PI;
+                    cloud.material.opacity = 0.55;
+                    cloudParticles.push(cloud);
+                    scene.add(cloud);
+                }
+            });
+
+            // Picture two
+            loader.load("https://i.imgur.com/kDzvFum.jpg", function (texture) {
+                const textureEffect = new POSTPROCESSING.TextureEffect({
+                    blendFunction: POSTPROCESSING.BlendFunction.COLOR_DODGE,
+                    texture: texture
+                });
+                textureEffect.blendMode.opacity.value = 0.0;
+
+                const bloomEffect = new POSTPROCESSING.BloomEffect({
+                    blendFunction: POSTPROCESSING.BlendFunction.COLOR_DODGE,
+                    kernelSize: POSTPROCESSING.KernelSize.SMALL,
+                    useLuminanceFilter: true,
+                    luminanceThreshold: 0.0,
+                    luminanceSmoothing: 0.0,
+                });
+                bloomEffect.blendMode.opacity.value = 1.2;
+
+                let effectPass = new POSTPROCESSING.EffectPass(
+                    camera,
+                    bloomEffect,
+                    textureEffect
+                );
+                effectPass.renderToScreen = true;
+
+                composer = new POSTPROCESSING.EffectComposer(renderer);
+                composer.addPass(new POSTPROCESSING.RenderPass(scene, camera));
+                composer.addPass(effectPass);
+
+                window.addEventListener("resize", onWindowResize, false);
+                render();
+            });
+        }
+
+        function onWindowResize() {
+            camera.aspect = window.innerWidth / window.innerHeight;
+            camera.updateProjectionMatrix();
+            renderer.setSize(window.innerWidth, window.innerHeight);
+        }
+
+        function render() {
+            cloudParticles.forEach(p => {
+                p.rotation.z -= 0.003;
+            });
+            composer.render(0.1);
+            requestAnimationFrame(render);
+        }
+
+       
 
 
-	<h1 id="cloud" onclick="cloud()">cloudradar!</h1>
+    //2
 
-<script>
-function cloud() {
-    document.getElementById("cloud").innerHTML = "...";
-    // Navigate to sfgdfd.html when the element is clicked
+function navigateToradar() {
+    // Redirect to mapwth.html when the button is clicked
     window.location.href = 'cloudradar.html';
 }
-</script>
+
+init();
+window.addEventListener("resize", onWindowResize, false);
+render();
+
+function navigateToMap() {
+        // Redirect to mapwth.html when the image is clicked
+        window.location.href = 'mapwth.html';
+    }
+
+    init();
+    window.addEventListener("resize", onWindowResize, false);
+    render();
+
+
+    function navigateTocloud() {
+        // Redirect to mapwth.html when the image is clicked
+        window.location.href = 'cloud.html';
+    }
+
+    init();
+    window.addEventListener("resize", onWindowResize, false);
+    render();
 
 
 
 
-	
+    </script>
 </body>
 </html>
+
+
