--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
 <body style="margin: 0; overflow: hidden;">
     
-    <img src="cloudradar.png" onclick="navigateToradar()" style="position: absolute; top: 75%; left: 35%; transform: translate(-90%, -30%); cursor: pointer;width: 400px; height: 400px;">
+    <img src="cloudradar.png" onclick="navigateToradar()" style="position: absolute; top: 85%; left: 35%; transform: translate(-90%, -30%); cursor: pointer;width: 400px; height: 400px;">
 
-    <img src="thecloud.png" onclick="navigateTocloud()" style="position: absolute; top: 55%; left: 35%; transform: translate(-90%, -30%); cursor: pointer;width: 400px; height: 400px;">
+    <img src="thecloud.png" onclick="navigateTocloud()" style="position: absolute; top: 65%; left: 35%; transform: translate(-90%, -30%); cursor: pointer;width: 400px; height: 400px;">
    
-    <img src="mapwth.png" onclick="navigateToMap()" style="position: absolute; top: 35%; left: 35%; transform: translate(-90%, -30%); cursor: pointer;width: 400px; height: 400px;">
+    <img src="mapwth.png" onclick="navigateToMap()" style="position: absolute; top: 50%; left: 35%; transform: translate(-90%, -30%); cursor: pointer;width: 400px; height: 400px;">
 
-
+  <button onclick="navigateToMap()" style="position: absolute; top: -90%; left: 90%; transform: translate(-50%, -50%); font-size: 35px;">محاكاة لضباب</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/postprocessing@6.7.0/build/postprocessing.min.js"></script>
