--- a/kingdomcloud.html
+++ b/kingdomcloud.html
@@ -140,6 +140,21 @@
 		requestAnimationFrame(render);
 	  }
 	  init();
+
+		
+
+function navigateTohomee() {
+        // Redirect to mapwth.html when the image is clicked
+        window.location.href = 'index.html';
+    }
+
+    init();
+    window.addEventListener("resize", onWindowResize, false);
+    render();
+
+
+		
+
 	</script>
 	</body>
 </html>
