--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Page Title</title>
+    <title>home page</title>
 </head>
 
 <body style="margin: 0; overflow: hidden;">
@@ -12,7 +12,9 @@
    
     <img src="mapwth.png" onclick="navigateToMap()" style="position: absolute; top: 70%; left: 68%; transform: translate(-90%, -30%); cursor: pointer;width: 400px; height: 400px;">
 
-  <button onclick="navigateToking()" style="position: absolute; top: 90%; left: 50%; transform: translate(-50%, -50%); font-size: 35px;">محاكاة لضباب</button>
+  <button onclick="navigateToking()" style="position: absolute; top: 90%; left: 46%; transform: translate(-50%, -50%); font-size: 35px;">محاكاة لضباب</button>
+
+      <button onclick="navigateTo3radar()" style="position: absolute; top: 25%; left: 55%; transform: translate(-50%, -50%); font-size: 35px;">رادار محدث</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/postprocessing@6.7.0/build/postprocessing.min.js"></script>
@@ -154,6 +156,16 @@ function navigateToMap() {
     init();
     window.addEventListener("resize", onWindowResize, false);
     render();
+
+        function navigateTo3radar() {
+        // Redirect to mapwth.html when the image is clicked
+        window.location.href = '3radar.html';
+    }
+
+    init();
+    window.addEventListener("resize", onWindowResize, false);
+    render();
+
 
 
 
