--- a/3radar.html
+++ b/3radar.html
@@ -161,7 +161,7 @@
          // MiniMap
     var miniMap = new L.Control.MiniMap(
         L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png'),
-        { toggleDisplay: true, position: 'bottomright' }
+        { toggleDisplay: true, position: 'topright' }
     ).addTo(map);
 
       
