--- a/cloudradar.html
+++ b/cloudradar.html
@@ -246,7 +246,7 @@
         animationTimer = setTimeout(أبداء, 500);
     }
 
-    function playStop() {
+    function أبداءتوقف() {
         if (!توقف()) {
             أبداء();
         }
