--- a/cloudradar.html
+++ b/cloudradar.html
@@ -7,11 +7,11 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <link href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" rel="stylesheet"/>
-    <link href="Leaflet.NavBar-master\src\Leaflet.NavBar.css" rel="stylesheet"/>
+    <link href="Leaflet.NavBar.css" rel="stylesheet"/>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
 
-    <script src="Leaflet.NavBar-master\src\Leaflet.NavBar.js"></script>
+    <script src="Leaflet.NavBar.js"></script>
 
 
     <style type="text/css">
