--- a/cloudradar.html
+++ b/cloudradar.html
@@ -27,7 +27,7 @@
 <body>
 
 <ul style="text-align:center; position: absolute;top: 0; left: 0; right: 0; height: 80px;">
-    <li><input type="radio" name="kind" checked="checked" onchange="setKind('radar')">سحب<input type="radio" name="kind" onchange="setKind('satellite')">رادار(واقع+متوقع)</li>
+    <li><input type="radio" name="kind" checked="checked" onchange="setKind('radar')">سحب<input type="radio" name="kind" onchange="setKind('satellite')">رادار واقع+متوقع تجريبي</li>
   <br>
     <li><input type="button" onclick="stop(); showFrame(animationPosition - 1); return;" value="&lt;" /></li>
     <li><input type="button" onclick="playStop();" value=" توفق  / أبداء "></li>
